--- a/nyelvek.css
+++ b/nyelvek.css
@@ -1,4 +1,8 @@
-﻿a
+﻿body{
+	color: #00008B;
+	background-color: #FFD700;
+}
+a
 {
 	color: red;
 }
@@ -62,9 +66,20 @@ p:first-letter
 }
 
 li
-{
+{	
+	list-style-image: url(list.png);
 	padding: 3px;
 	margin: 3px;
 	font-style: italic;
+}
+h2, h1{
+	color: red;
+	text-transform: uppercase;
+}
+#f_vonal{
+	width: 800px;
+	background-color: green;
+	height: 6px;
+	border: none;
 }
 
